--- a/index.html
+++ b/index.html
@@ -91,25 +91,25 @@
 			</div>
 			
 			<div class="main-container">
-				<section class="cover fullscreen image-bg overlay parallax">
-					<div class="background-image-holder">
-						<img alt="image" class="background-image" src="img/2.jpg">
-					</div>
-					<div class="container v-align-transform">
-						<div class="row">
-							<div class="col-md-12 text-center">
-								<div class="text-center content-wrapper">
-									<h2 class="title-text">Melina & German</h2>
-									<h4 class="sub-title-text">Nos encontramos, nos enamoramos y juntos construimos nuestro destino</h4>
-									<h1 class="main-title">¡Nos Casamos!</h1>
-									<h4 class="sub-title-text">Y nos gustaría que nos acompañes a celebrar este hermoso capítulo de nuestra historia</h4>
-									<div class="countdown mb40" data-date="2025/03/29 20:00:00"></div>
-									<a class="btn btn-lg btn-white mb0 inner-link" id="btnc" href="index.html#info">ver información</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
+					<section class="cover fullscreen image-bg overlay parallax">
+			        <div class="background-image-holder">
+			            <img alt="image" class="background-image" src="img/2.jpg">
+			        </div>
+			        <div class="container v-align-transform">
+			            <div class="row">
+			                <div class="col-md-12 text-center">
+			                    <div class="text-center">
+			                    	<h2 style="font-family: 'Dancing Script', cursive; font-size:40px;">Melina & German</h2>
+			                    	<h4>Nos encontramos, nos enamoramos y juntos construimos nuestro destino</h4>
+			                        <h1 class=" large  mb40 mb-xs-24" style="font-family: 'Dancing Script', cursive; font-size:55px">¡Nos Casamos!</h1>
+			                        <h4>Y nos gustaria que nos acompañes a celebrar este hermoso capitulo de nuestra historia</h4>
+			                        <div class="countdown mb40" data-date="2019/06/16 20:00:00"></div>
+			                        <a class="btn btn-lg btn-white mb0 inner-link" id="btnc" href="index.html#info">ver información</a>
+			                    </div>
+			                </div>
+			            </div>		            
+			        </div>
+			    </section>
 
 			    <section id="infotodo">
 			        <div class="container">
