--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</div>
 			
 			<div class="main-container">
-					<section class="cover fullscreen image-bg overlay parallax">
+				<section class="cover fullscreen image-bg overlay parallax">
 			        <div class="background-image-holder">
 			            <img alt="image" class="background-image" src="img/2.jpg">
 			        </div>
@@ -469,7 +469,7 @@
 					            <var class="atc_description">Casamiento Melina & German</var>
 					            <var class="atc_location">Av. Hipólito Yrigoyen 7835, San Rafael, Mendoza.</var>
 					            <var class="atc_organizer">Melina & German</var>
-					            <var class="atc_organizer_email">claudiotico@gmail.com</var>
+					            <var class="atc_organizer_email">germank94@gmail.com</var>
 					        </var>
     					</span>
 				    </div>
@@ -555,7 +555,7 @@
 				var menuEspecial = document.getElementById('menu-especial').value || "ninguno";
 				
 				// Armar el cuerpo del correo con los datos capturados
-				var mailtoLink = 'mailto:claudiotico@gmail.com?subject=¡Si Voy!&body=' +
+				var mailtoLink = 'mailto:germank94@gmail.com?subject=¡Si Voy!&body=' +
 					'Con este mail nos confirmas que venís a compartir este día con nosotros.%0A' +
 					'Número de asistentes: ' + asistentes + '%0A' +
 					'Menú especial: ' + menuEspecial + '%0A' +
